Question component embedded
Successfully embedded <Question/> into Game component. Used props and state to allow the two components to communicate.

--- a/quiz-app/src/styles.css
+++ b/quiz-app/src/styles.css
@@ -35,7 +35,7 @@ img{
     
 }
 .questionContainer{
-    background-color: #f4dbe3;
+    background-color:#f30909;
     margin: 3rem;
     border-radius:1rem;
     height: auto;
