--- a/quiz-app/src/styles.css
+++ b/quiz-app/src/styles.css
@@ -107,20 +107,15 @@ img{
     display:flex;
     justify-content:space-evenly;
 }
-.prevButton{
+.prevButton, .nextButton{
     border-radius: 1rem;
-    background-color:rgba(30, 0, 255, 0.2);
+    background-color:blue;
     font-size: large;
     width:8rem;
     padding:1rem;
     color:white
 }
-.nextButton{
-    border-radius: 1rem;
-    background-color:rgba(30, 0, 255, 0.2);
-    font-size: large;
-    width:8rem;
-    padding:1rem;
-    color:white;
+.nextButton:hover, .prevButton:hover{
+    background-color:#080e55;
 }
 
