--- a/quiz-app/src/styles.css
+++ b/quiz-app/src/styles.css
@@ -34,7 +34,7 @@ img{
 }
 .questionContainer{
     background-color:#f30909;
-    margin: 3rem;
+    margin: 2rem;
     padding: 0 2rem;
     border-radius:1rem;
     height: auto;
@@ -47,13 +47,13 @@ img{
 }
 .answerContainer{
     background-color:#080e55;
-    margin: 3rem;
+    margin: 2rem;
     border-radius:1rem;
     height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2)
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 .answerTextDefault{
     background-color: white;
@@ -96,25 +96,29 @@ img{
     font-weight: bold;
     font-size:medium;
 }
-.score {
+.scoreText {
     color: black;
+    background-color: aqua;
+    width: 20rem;
+    border-radius: 1rem;
+    margin: 1rem auto;
     font-weight: bold;
     text-align: center;
     font-size: larger;
 }
 .navButtons{
-    display:flex;
-    justify-content:space-evenly;
+    display: flex;
+    justify-content: space-evenly;
 }
 .prevButton, .nextButton{
     border-radius: 1rem;
-    background-color:blue;
+    background-color: blue;
     font-size: large;
-    width:8rem;
-    padding:1rem;
-    color:white
+    width: 8rem;
+    padding: 1rem;
+    color: white
 }
 .nextButton:hover, .prevButton:hover{
-    background-color:#080e55;
+    background-color: #080e55;
 }
 
