--- a/src/styles.css
+++ b/src/styles.css
@@ -97,17 +97,10 @@ img{
     font-size:medium;
 }
 .score {
-    background-color: blue;
-    width: 10rem;
-    height: 2.6rem;
-    margin: 0;
-    border-radius: 1rem;
-    text-align: center;
+    background-color: white;
+    color: black;
     font-size: larger;
-    border-style: solid;
-    border-color: black;
-    border-width: 1.8px;
-    padding-top: 1.2rem;
+   
 }
 .nav{
     display: flex;
