--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,7 @@ img{
     border-radius: 1rem;
     padding-top: 0.01rem;
     padding-bottom: 0.5rem;
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
 }
 .questionContainer{
     background-color:#f30909;
@@ -120,8 +120,10 @@ img{
     background-color: #080e55;
 }
 .footer {
+   text-align: center;
+   margin-bottom:1.5rem;
+   
+}
+.footer a{
     color: white;
-    padding-left: 44rem;
-    padding-bottom: 1rem;
-    text-decoration: none;
 }
