--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,22 @@ body{
     font-size: 3rem;
     flex-shrink: 3;
 }
+@media (max-width:1100px){
+.header-text{
+    font-size:2.5rem;
+}
+}
+@media (max-width:1000px){
+    .header-text{
+        font-size:2rem;
+    }
+    }
+@media (max-width:500px){
+    .header-text{
+        font-size: 1rem;
+    }
+}
+
 .header{
     position:relative;
     justify-content: center;
@@ -24,13 +40,37 @@ body{
     height: 6rem;
     left:3rem;
 }
+@media (max-width:1000px){
+    .header img{
+        height:5rem;
+        left:2rem;
+    }
+    }
+@media (max-width:820px){
+    .header img{
+            height:4rem;
+            left:1.5rem;
+    }
+}
+@media (max-width:740px){
+    .header img{
+            height:3rem;
+            left:1rem;
+    }
+}
+@media (max-width:685px){
+    .header img{
+            height:0rem;
+            left:1.5rem;
+    }
+}
 .gameBackground{
     background-color: #080e55;
 }
 .panel{
     height:auto;
     background-color: white;
-    margin: auto 20rem;
+    margin: auto 20%;
     border-radius: 1rem;
     padding-top: 0.01rem;
     padding-bottom: 0.5rem;
@@ -65,8 +105,8 @@ body{
     color: black;
     padding:1rem;
     text-align: center;
+    width:80%;
     margin:0.5rem auto;
-    width: 20rem;
     font-weight: bold;
     font-size:medium;
 }
@@ -82,7 +122,7 @@ body{
     padding:1rem;
     text-align: center;
     margin:0.5rem auto;
-    width: 20rem;
+    width:80%;
     font-weight: bold;
     font-size:medium;
 }
@@ -93,7 +133,7 @@ body{
     padding:1rem;
     text-align: center;
     margin:0.5rem auto;
-    width: 20rem;
+    width:80%;
     font-weight: bold;
     font-size:medium;
 }
