--- a/src/styles.css
+++ b/src/styles.css
@@ -21,9 +21,9 @@ body{
         font-size:2rem;
     }
     }
-@media (max-width:500px){
+@media (max-width:685px){
     .header-text{
-        font-size: 1rem;
+        font-size: 2rem;
     }
 }
 
@@ -34,6 +34,7 @@ body{
     background: linear-gradient(#f30909, #080e55);
     height: 8rem;
     align-items: center;
+    text-align: center;
 }
 .header img{
     position: absolute;
@@ -75,6 +76,12 @@ body{
     padding-top: 0.01rem;
     padding-bottom: 0.5rem;
     margin-bottom: 3rem;
+}
+@media (max-width:650px){
+    .panel{
+            margin:auto 10%;
+            margin-bottom: 2rem;
+    }
 }
 .questionContainer{
     background-color:#f30909;
@@ -141,7 +148,15 @@ body{
     background-color: white;
     color: black;
     font-size: larger;
-   
+    font-weight: bold;
+}
+@media (max-width: 550px){
+    .score{
+        font-size:medium;
+    }
+}
+.score-container{
+    text-align: center;
 }
 .nav{
     display: flex;
@@ -152,11 +167,17 @@ body{
     border-radius: 1rem;
     background-color: blue;
     font-size: larger;
-    width: 8rem;
+    width: 30%;
     height: 4rem;
-    padding: 1rem;
+    padding: 0.5rem;
     color: white
 }
+@media (max-width:725px){
+    .navButton{
+            font-size: small;
+    }
+}
+
 .navButton:hover{
     background-color: #080e55;
 }
