--- a/src/Assets/Styles/styles.css
+++ b/src/Assets/Styles/styles.css
@@ -228,6 +228,10 @@ body {
     padding-bottom: 0.5rem;
     margin-bottom: 3rem;
     text-align: center;
+    display: flex;
+    flex-direction: column; /* Stack items vertically */
+    justify-content: center; /* Center items vertically */
+    align-items: center; /* Center items horizontally */
 }
 
 @media (max-width:650px) {
@@ -239,5 +243,29 @@ body {
 .results-text{
     color:black;
     line-height: 2rem;
+}
 
+.play-again-button {
+    display: inline-block;
+    padding: 12px 24px;
+    margin-bottom: 20px;
+    background-color: #f30909;
+    color: #fff; /* White text */
+    font-size: 1rem; /* Adjust size as needed */
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none; /* Remove underline */
+    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.play-again-button:hover {
+    background-color: #080e55; 
+    transform: translateY(-2px); /* Slight lift */
+}
+
+.play-again-button:active {
+    background-color: #080e55; 
+    transform: translateY(0); /* Return to normal */
 }
